EKS-cloud-demo/demo/101-security-controls/default-dev-deny.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: default-dev-deny
spec:
  order: 2000
  selector: "projectcalico.org/namespace in {'dev','hipstershop'}"
  types:
  - Ingress
  - Egress
