EKS-cloud-demo/demo/101-security-controls/devops-team.deny-egress-storefront.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: devops-team.deny-egress-storefront
  namespace: storefront
spec:
  tier: devops-team
  order: 1350
  selector: all()
  egress:
    - action: Deny
      source: {}
      destination: {}
  types:
    - Egress
